--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
-h1, h2 {
+h1,
+h2 {
   font-family: Lato;
+}
+
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: yellow;
+  padding: 50px;
+  font-size: 20px;
 }
